--- a/statusbar_lib/build.gradle
+++ b/statusbar_lib/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'//需添加的
 apply plugin: 'com.jfrog.bintray'//需添加的
-version = "1.1.4" // 修改为你的版本号
+version = "1.1.5" // 修改为你的版本号
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName this.version
     }
@@ -96,7 +96,7 @@ bintray {
 
 
 dependencies {
-    compileOnly "com.android.support:support-annotations:27.1.1"
-    compileOnly "com.android.support:design:27.1.1"
+    compileOnly "androidx.annotation:annotation:1.0.0"
+    compileOnly "androidx.drawerlayout:drawerlayout:1.0.0"
 }
 //先执行   chmod a+x ./gradlew   ./gradlew install ，然后执行 ./gradlew bintrayUpload
